@@ -1,76 +1,50 @@
 package rpg.core;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Objects;
 
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
- * Groupe de personnages avec opérations de base (ajout, retrait, lecture, tris).
+ * Groupe de personnages (interface) avec opérations de base.
+ * Utilise CharacterProfile pour accepter aussi les décorateurs.
  */
 public class Party {
-    private final List<Character> members = new ArrayList<>();
+    private final List<CharacterProfile> members = new ArrayList<>();
 
-
-    /**
-     * Ajoute un personnage (refus des valeurs null).
-     */
-    public void add(Character character) {
+    /** Ajoute un personnage (refus des valeurs null). */
+    public void add(CharacterProfile character) {
         members.add(Objects.requireNonNull(character, "character must not be null"));
     }
 
-    /**
-     * Retire le(s) membre(s) portant ce nom (comparaison insensible à la casse).
-     * @return true si au moins un membre a été retiré.
-     */
+    /** Retire le(s) membre(s) portant ce nom (insensible à la casse). */
     public boolean removeByName(String name) {
         return members.removeIf(c -> c.getName().equalsIgnoreCase(name));
     }
 
-    /**
-     * Expose une vue non modifiable des membres (copie immuable).
-     */
-    public List<Character> getMembers() {
-        return List.copyOf(members);
+    /** Vue non modifiable des membres. */
+    public List<CharacterProfile> getMembers() {
+        return Collections.unmodifiableList(members);
     }
 
-    /**
-     * Retourne une nouvelle liste triée par puissance décroissante.
-     * (la liste interne n'est pas modifiée)
-     */
-    public List<Character> sortByPowerDesc() {
-        return members.stream()
-                .sorted(Comparator.comparingInt(Character::getPowerLevel).reversed())
-                .toList();
-    }
-
-    /**
-     * Retourne une nouvelle liste triée par nom (A→Z, insensible à la casse).
-     * (la liste interne n'est pas modifiée)
-     */
-    public List<Character> sortByNameAsc() {
-        return members.stream()
-                .sorted(Comparator.comparing(Character::getName, String.CASE_INSENSITIVE_ORDER))
-                .toList();
-    }
-
-
-    /**
-     * Puissance totale du groupe (somme de {@code getPowerLevel()} pour chaque membre).
-     */
+    /** Puissance totale du groupe. */
     public int getTotalPower() {
-        return members.stream().mapToInt(Character::getPowerLevel).sum();
+        return members.stream().mapToInt(CharacterProfile::getPowerLevel).sum();
     }
 
-    public int getStrength() {
-        return members.stream().mapToInt(Character::getStrength).sum();
+    /** Nouvelle liste triée par puissance décroissante (la liste interne n’est pas modifiée). */
+    public List<CharacterProfile> sortByPowerDesc() {
+        return members.stream()
+                .sorted(Comparator.comparingInt(CharacterProfile::getPowerLevel).reversed())
+                .collect(Collectors.toUnmodifiableList());
     }
 
-    public int getAgility() {
-        return members.stream().mapToInt(Character::getAgility).sum();
+    /** Nouvelle liste triée par nom (A→Z, insensible à la casse). */
+    public List<CharacterProfile> sortByNameAsc() {
+        return members.stream()
+                .sorted(Comparator.comparing(CharacterProfile::getName, String.CASE_INSENSITIVE_ORDER))
+                .collect(Collectors.toUnmodifiableList());
     }
 
-    public int getIntelligence() {
-        return members.stream().mapToInt(Character::getIntelligence).sum();
-    }
+    public int getStrength()      { return members.stream().mapToInt(CharacterProfile::getStrength).sum(); }
+    public int getAgility()       { return members.stream().mapToInt(CharacterProfile::getAgility).sum(); }
+    public int getIntelligence()  { return members.stream().mapToInt(CharacterProfile::getIntelligence).sum(); }
 }
